feat(backend): add Leyden AOT and native CI